Refactoring and docs updates
Signed-off-by: Jared Hocutt <jhocutt@redhat.com>

--- a/templates/franz.desktop.j2
+++ b/templates/franz.desktop.j2
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Franz
 Comment=Messaging app for WhatsApp, Slack, Telegram, HipChat, Hangouts and many many more.
-Exec=/opt/franz/franz %U
-Icon=/opt/franz/icon.png
+Exec={{ franz_install_dir }}/franz %U
+Icon={{ franz_install_dir }}/icon.png
 Type=Application
 StartupNotify=true
